Backend: Simplify list collection by replacing collect(Collectors.toList()) with toList() in PartService