@@ -23,7 +23,6 @@ import com.servit.servit.util.FileUtil;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.time.temporal.ChronoUnit;
 
 import org.slf4j.Logger;
@@ -86,7 +85,7 @@ public class PartService {
             List<PartEntity> existingParts = partRepository.findAllByPartNumber(req.getPartNumber())
                     .stream()
                     .filter(p -> !p.getIsDeleted())
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (existingParts.isEmpty()) {
                 throw new IllegalArgumentException("No active parts found with part number: " + req.getPartNumber());
@@ -157,7 +156,7 @@ public class PartService {
             List<PartEntity> existingParts = partRepository.findAllByPartNumber(req.getPartNumber())
                     .stream()
                     .filter(p -> !p.getIsDeleted())
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (existingParts.isEmpty()) {
                 throw new IllegalArgumentException("No active parts found with part number: " + req.getPartNumber());
@@ -243,7 +242,7 @@ public class PartService {
             List<PartEntity> existingParts = partRepository.findAllByPartNumber(partNumber)
                     .stream()
                     .filter(p -> !Boolean.TRUE.equals(p.getIsDeleted()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (existingParts.isEmpty()) {
                 throw new IllegalArgumentException("Part number does not exist: " + partNumber);
@@ -333,7 +332,7 @@ public class PartService {
         }
 
         logger.info("Bulk parts added successfully: {} parts with part number: {}", savedParts.size(), partNumber);
-        return savedParts.stream().map(this::convertToDto).collect(Collectors.toList());
+        return savedParts.stream().map(this::convertToDto).toList();
     }
 
     /**
@@ -468,7 +467,7 @@ public class PartService {
     @Transactional(readOnly = true)
     public List<PartResponseDTO> searchParts(String searchTerm) {
         logger.info("Searching parts with term: {}", searchTerm);
-        return partRepository.searchParts(searchTerm).stream().map(this::convertToDto).collect(Collectors.toList());
+        return partRepository.searchParts(searchTerm).stream().map(this::convertToDto).toList();
     }
 
     // ================ List Operations ================
@@ -482,7 +481,7 @@ public class PartService {
         logger.info("Retrieving all parts");
         return partRepository.findByIsDeletedFalse().stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -509,7 +508,7 @@ public class PartService {
                     }
                 })
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -533,13 +532,13 @@ public class PartService {
             List<PartEntity> partsForNumber = partRepository.findAllByPartNumber(lowStockSummary.getPartNumber())
                     .stream()
                     .filter(part -> part.getIsDeleted() == null || !part.getIsDeleted())
-                    .collect(Collectors.toList());
+                    .toList();
             lowStockParts.addAll(partsForNumber);
         }
 
         return lowStockParts.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -551,7 +550,7 @@ public class PartService {
     public List<PartResponseDTO> getAllPartsForQuotation() {
         try {
             List<PartEntity> parts = partRepository.findEligiblePartsForQuotation();
-            return parts.stream().map(this::convertToDto).collect(Collectors.toList());
+            return parts.stream().map(this::convertToDto).toList();
         } catch (Exception e) {
             logger.error("Error retrieving parts for quotation: {}", e.getMessage(), e);
             throw new RuntimeException("Failed to retrieve parts for quotation", e);
